# Clawdmeter

./: .gitignore  CHANGELOG-FORK.md  CLAUDE.md  NOTICE.md  README.md  flash-mac-18.sh  flash-mac.sh  flash-win.ps1  flash-windows.ps1  flash.sh  install-mac-18.sh  install-mac.sh  install-macos.sh  install-win.ps1  install-windows.ps1  install.sh  screenshot.sh  setup-win.ps1  uninstall-win.ps1
daemon/: .dockerignore  Dockerfile  README-windows.md  accounts.example.json  build_calnext.sh  calnext.plist  calnext.swift  claude-usage-daemon-macos.py  claude-usage-daemon.py  claude-usage-daemon.service  claude-usage-daemon.sh  claude_usage_daemon.py  claude_usage_daemon_serial_windows.py  claude_usage_daemon_windows.py  clawdmeter-hook.py  clawdmeter_hook.py  com.clawdmeter.usage-daemon.plist  config.example  dashboard_collectors.py  dashboard_payload.py  docker-compose.yml  fable_usage.py  install-macos.sh  install-windows-daemon.ps1  install_hooks_win.py  probe_headers.py  requirements-windows-serial.txt  requirements-windows.txt  run-daemon.ps1  start-claude-usage-daemon.ps1  tray_windows.py  uninstall-windows-daemon.ps1
daemon-rs/: Cargo.toml
daemon-rs-spike/: Cargo.toml
daemon-rs/src/: ble.rs  config.rs  main.rs
daemon-rs/src/providers/: claude.rs  codex.rs  mod.rs
daemon-ts-spike/: .gitignore  README.md  index.ts  package.json
docs/: README.pt-BR.md  xingzhi-bringup-issues.md
firmware/: .env  Dockerfile  pio-docker.sh  platformio.ini
screenshots/: claude.raw  system.raw
scripts/: clawdmeter-daemon.sh
tests/: test_esp32_2432s024c_contract.py
(+278 files in other folders)
